--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose",
+    "lint": "eslint ."
   },
   "author": "Atte Laakso",
   "license": "ISC",
@@ -17,6 +18,11 @@
     "mongoose": "^6.3.5"
   },
   "devDependencies": {
+    "eslint": "^8.17.0",
+    "jest": "^28.1.1",
     "nodemon": "^2.0.16"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
